fix call-request block align engine and styles

--- a/desktop.blocks/b-page/__body/b-page__body.css
+++ b/desktop.blocks/b-page/__body/b-page__body.css
@@ -6,3 +6,9 @@
     font-family: Arial, sans-serif;
     min-width: 1002px;
 }
+
+input::-moz-focus-inner,
+button::-moz-focus-inner {
+    padding:0;
+    border:0;
+}
