--- a/desktop.blocks/call-request/__button/call-request__button.css
+++ b/desktop.blocks/call-request/__button/call-request__button.css
@@ -1,4 +1,4 @@
 .call-request__button
 {
-    margin: 13px 0 0 0;
+    margin: 15px 0 0 0;
 }
