--- a/desktop.blocks/call-request/__closer/call-request__closer.css
+++ b/desktop.blocks/call-request/__closer/call-request__closer.css
@@ -6,3 +6,7 @@
     cursor: pointer;
     color: #969696;
 }
+
+.call-request__closer:hover {
+    color: #000000;
+}
