--- a/desktop.blocks/carousel/__control/_direction/carousel__control_direction_next.css
+++ b/desktop.blocks/carousel/__control/_direction/carousel__control_direction_next.css
@@ -2,3 +2,7 @@
 {
     right: -16px;
 }
+
+.catalog-index-page .carousel__control_direction_next {
+    right: 0;
+}
