--- a/desktop.blocks/product-card/__info/product-card__info.css
+++ b/desktop.blocks/product-card/__info/product-card__info.css
@@ -11,5 +11,5 @@
     width: 345px;
     margin-top: 0;
     white-space: normal;
-    margin-left: 30px;
+    margin-left: 45px;
 }
