--- a/desktop.blocks/product-card/__photo/product-card__photo.css
+++ b/desktop.blocks/product-card/__photo/product-card__photo.css
@@ -11,7 +11,7 @@
 .product-card_type_withFullDesc .product-card__photo {
     display: inline-block;
     vertical-align: top;
-    margin: 20px 40px 0 0;
-    max-width: 227px;
+    margin: 0;
+    max-width: 228px;
     height: 128px;
 }
